Implement basic runner
Signed-off-by: Zahari Petkov <zahari@balena.io>

--- a/runner/Cargo.toml
+++ b/runner/Cargo.toml
@@ -3,6 +3,12 @@ name = "runner"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+actix-rt = "*"
+actix-server = "*"
+num-traits = "*"
+num-derive = "*"
+
+[dependencies.awc]
+version = "*"
+features = ["openssl"]
