Invoke commands on the checker service
Signed-off-by: Zahari Petkov <zahari@balena.io>

--- a/runner/Cargo.toml
+++ b/runner/Cargo.toml
@@ -9,6 +9,10 @@ actix-server = "*"
 num-traits = "*"
 num-derive = "*"
 
+[dependencies.serde]
+version = "*"
+features = ["derive"]
+
 [dependencies.awc]
 version = "*"
 features = ["openssl"]
